Overflow to visible, fix odd shadows. No queue when animating.

--- a/packages/mysli/js/ui/assets/css/panel.styl
+++ b/packages/mysli/js/ui/assets/css/panel.styl
@@ -4,6 +4,7 @@
     width: 200px
     height: 100%
     position: absolute
+    overflow: visible
     & > .ui-panel-sides
         position: absolute
         top: 0
